[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/Menus/ModeSelection.gd" type="Script" id=2]
[ext_resource path="res://UI/Menus/MenuHeader.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/DarkPanel.tres" type="StyleBox" id=4]
[ext_resource path="res://Fonts/TextFont.tres" type="DynamicFont" id=5]

[node name="Node2D" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1336.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Rect", "Theme" ]

[node name="BackButton" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 493.0
margin_top = 609.0
margin_right = 843.0
margin_bottom = 699.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Go back to the Main Menu."
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Hint", "Theme" ]

[node name="DeleteSaveButton" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 250.0
margin_top = 210.0
margin_right = 485.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Go back to the Main Menu."
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "DELETE SAVE"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Hint", "Theme" ]

[node name="ButtonPanel" type="Panel" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -495.0
margin_top = -65.0
margin_right = 495.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Theme" ]

[node name="StoryModeButton" type="Button" parent="ButtonPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 370.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Play the Story Mode."
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Story"
flat = false
align = 1
_sections_unfolded = [ "Hint", "custom_fonts" ]

[node name="ArcadeModeButton" type="Button" parent="ButtonPanel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 600.0
margin_top = 20.0
margin_right = 950.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Play the Arcade Mode."
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Arcade"
flat = false
align = 1
_sections_unfolded = [ "Hint" ]

[node name="Header" parent="." index="3" instance=ExtResource( 3 )]

text = "Play Game"

[node name="DeleteWarning" type="PopupPanel" parent="." index="4"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.0
margin_top = -100.0
margin_right = 347.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = ExtResource( 4 )
popup_exclusive = false
_sections_unfolded = [ "Material", "custom_styles" ]

[node name="DeleteText" type="Label" parent="DeleteWarning" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -288.0
margin_top = 6.0
margin_right = 292.0
margin_bottom = 131.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Deleting a save requires the game to quit.
Would you like to quit?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="DeleteYes" type="Button" parent="DeleteWarning" index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 57.0
margin_top = -89.0
margin_right = 217.0
margin_bottom = -14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Yes"
flat = false
align = 1

[node name="DeleteNo" type="Button" parent="DeleteWarning" index="2"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -215.0
margin_top = -89.0
margin_right = -55.0
margin_bottom = -14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "No"
flat = false
align = 1

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="pressed" from="DeleteSaveButton" to="." method="_on_DeleteSaveButton_pressed"]

[connection signal="pressed" from="ButtonPanel/StoryModeButton" to="." method="_on_StoryModeButton_pressed"]

[connection signal="pressed" from="ButtonPanel/ArcadeModeButton" to="." method="_on_ArcadeModeButton_pressed"]

[connection signal="pressed" from="DeleteWarning/DeleteYes" to="." method="delete_game"]

[connection signal="pressed" from="DeleteWarning/DeleteNo" to="." method="_on_DeleteNo_pressed"]


